Added DatePicker for setting start date of data series.